manifests/istio/load-balancer/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: web
  namespace: default
spec:
  hosts:
    - "web.local"
  gateways:
    - web-gateway
  http:
    - match:  # match path
        - uri:
            exact: /
        - uri:
            exact: /healthz
      route:
        # weighted destination
        - destination:
            host: web
            subset: v1
            port:
              number: 80
          weight: 75
        - destination:
            host: web
            subset: v2
            port:
              number: 80
          weight: 25
